[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/Antapani-ExtraBold.otf" type="FontFile" id=1]
[ext_resource path="res://GameOver.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/digital-dream/DIGITALDREAMFAT.ttf" type="FontFile" id=3]
[ext_resource path="res://TextEditLimits.gd" type="Script" id=4]

[sub_resource type="FontFile" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=6]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.4, 0.8 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=8]
resource_name = "Appears"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="FontFile" id=7]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=5]
size = 32
font_data = ExtResource( 1 )

[node name="GameOver" type="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.819608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.5
offset_top = -350.5
offset_right = 260.5
offset_bottom = -273.5
theme_override_fonts/font = SubResource( 1 )
text = "LOVE HURTS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -633.0
offset_top = -222.0
offset_right = 632.0
offset_bottom = -145.0
theme_override_fonts/font = SubResource( 6 )
text = "0:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Score"]
autoplay = "Blink"
anims/Blink = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appears = SubResource( 8 )

[node name="Instructions" type="Label" parent="."]
offset_left = 187.734
offset_top = 490.57
offset_right = 530.734
offset_bottom = 524.57
theme_override_fonts/font = SubResource( 7 )
text = "WRITE YOUR NAME HERE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.5
offset_top = 201.0
offset_right = 125.5
offset_bottom = 295.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="VBoxContainer"]
offset_right = 251.0
offset_bottom = 45.0
theme_override_fonts/font = SubResource( 3 )
text = "TRY AGAIN"

[node name="BackMenu" type="Button" parent="VBoxContainer"]
offset_top = 49.0
offset_right = 251.0
offset_bottom = 94.0
theme_override_fonts/font = SubResource( 3 )
text = "BACK TO MENU"

[node name="SendToLeaderboard" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 203.696
offset_top = 130.998
offset_right = -248.304
offset_bottom = 175.998
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="TextEdit" parent="SendToLeaderboard"]
offset_right = 300.0
offset_bottom = 45.0
custom_minimum_size = Vector2( 300, 0 )
theme_override_fonts/font = SubResource( 4 )
theme_override_constants/completion_max_width = 15
script = ExtResource( 4 )

[node name="Padding" type="Control" parent="SendToLeaderboard"]
offset_left = 304.0
offset_right = 460.0
offset_bottom = 45.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="SendToLeaderboard"]
offset_left = 464.0
offset_right = 828.0
offset_bottom = 45.0
theme_override_fonts/font = SubResource( 5 )
text = "ADD TO LEADERBOARD"
[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="VBoxContainer/BackMenu" to="." method="_on_BackMenu_pressed"]
[connection signal="text_changed" from="SendToLeaderboard/Name" to="SendToLeaderboard/Name" method="_on_Name_text_changed"]
[connection signal="pressed" from="SendToLeaderboard/Button" to="." method="_on_Button_pressed"]
